k8s/evs-be-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evs-be-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: evs-be-deployment
  template:
    metadata:
      labels:
        app: evs-be-deployment
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: evs-be-deployment

      containers:
        - name: evs-be-deployment
          image: ghcr.io/engvision/project-engvision:backend-184
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: k8s-ghcr

#       resource:
#         requests:
#           memory: "512Mi"
#           cpu: "250m"
#         limits:
#           memory: "1Gi"
#           cpu: "500m"

# ---
# apiVersion: autoscaling/v2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: evs-be-deployment
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: Deployment
#     name: evs-be-deployment
#   minReplicas: 1
#   maxReplicas: 3
#   metrics:
#     - type: Resource
#       resource:
#         name: cpu
#         target:
#           type: Utilization
#           averageUtilization: 80
#     - type: Resource
#       resource:
#         name: memory
#         target:
#           type: Utilization
#           averageUtilization: 80
