k8s/evs-whisper-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evs-whisper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: evs-whisper-deployment
  template:
    metadata:
      labels:
        app: evs-whisper-deployment
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: evs-whisper-deployment

      containers:
        - name: evs-whisper-deployment
          image: ghcr.io/engvision/whisper-service:13
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: k8s-ghcr
