k8s/evs-be-service.yml
apiVersion: v1
kind: Service
metadata:
  name: evs-be-master-service
spec:
  selector:
    app: evs-be-master-deployment
  ports:
    - name: evs-be-master-service
      protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: evs-be-develop-service
spec:
  selector:
    app: evs-be-develop-deployment
  ports:
    - name: evs-be-develop-service
      protocol: TCP
      port: 5005
      targetPort: 5005
