k8s/evs-whisper-service.yml
apiVersion: v1
kind: Service
metadata:
  name: evs-be-master-service
spec:
  selector:
    app: evs-whisper-deployment
  ports:
    - name: evs-be-master-service
      protocol: TCP
      port: 8000
      targetPort: 8000
