k8s/evs-ingress-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evs-ingress-monitoring
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "prometheus.engvision.edu.vn"
        - "grafana.engvision.edu.vn"
  rules:
    - host: "prometheus.engvision.edu.vn"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80

    - host: "grafana.engvision.edu.vn"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
