k8s/evs-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evs-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "api.engvision.edu.vn"
        - "engvision.edu.vn"
      secretName: evs-tls
  rules:
    - host: "api.engvision.edu.vn"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evs-be-service
                port:
                  number: 5000
    - host: "engvision.edu.vn"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: evs-fe-service
                port:
                  number: 3000
